# Breakout-Python

./: LICENCE  README.md  game copy.py  game.py  main.py  pyproject.toml  settings.py
components/: audio.py  discord_rpc.py  error_handler.py  shaders.py
core/: context.py  engine.py  error_handler.py  event_handler.py  scene_manager.py
docs/: index.html
effects/: screen_shake.py
entities/: ball.py  brick.py  player.py
objects/: prototype.py
objects/gui/: button.py  hint.py  mouse.py
objects/level/: ball.py  brick.py  player.py  stats.py
objects/menu/: credits.py
scenes/: development.py  development_scene.py  level.py  menu.py  splash.py
shaders/: crt.glsl
systems/: audio.py  discord.py  logging.py  renderer.py
