[project]
name = "breakout-python-nsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "discord-rpc>=5.1",
    "glm>=0.4.4",
    "moderngl>=5.12.0",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "pygame-shaders>=2.0.2",
]
